Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,5 +1,55 @@
-<HTML>
-<body>
-<B>github site</b>
-</body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Pcahan1.github.io by pcahan1</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Pcahan1.github.io</h1>
+        <p>pcahan1&#39;s githib stuff</p>
+        <p class="view"><a href="https://github.com/pcahan1">View the Project on GitHub <small>pcahan1</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/pcahan1/pcahan1.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a name="pcahan1-code--github" class="anchor" href="#pcahan1-code--github"><span class="octicon octicon-link"></span></a>pcahan1 code @ gitHub</h3>
+
+<p>Most of this code hosted here is related to my research in Computational and Systems Biology. You can find out more about this research at my <a href="http://scholar.google.com/citations?user=-iGXSwYAAAAJ&amp;hl=en">Google Scholar webpage</a></p>
+
+<h3>
+<a name="cellnet" class="anchor" href="#cellnet"><span class="octicon octicon-link"></span></a>CellNet</h3>
+
+<p>CellNet is a network biology-based computational platform designed to estimate the extent to which endogenous, cell type specific gene regulatory networks have been established in user-provided gene expression profiles.</p>
+      </section>
+    </div>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-6702049-2");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+  </body>
 </html>
